--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,12 +51,13 @@ nav:
         - "Input Files": 
             - Documentation/input_files.md
             - Documentation/calculator_setup.md
+            - Workflows:
+                - "Relaxation": Documentation/relaxation.md
+                - "Phonopy": Documentation/phonopy.md
+                - "Molecular Dynamics": Documentation/md.md
+            - Documentation/input_files_slurm.md
         - Documentation/output_files.md
         - Documentation/cli.md
-        - Workflows:
-            - "Relaxation": Documentation/relaxation.md
-            - "Phonopy": Documentation/phonopy.md
-            - "Molecular Dynamics": Documentation/md.md
         - High-Throughut:
                 - Overview: High_Throughput/Documentation/0_overview.md
                 - Installation Guide: High_Throughput/Installation/0_setup.md
