--- a/vibes/templates/config_files/slurm.in
+++ b/vibes/templates/config_files/slurm.in
@@ -2,7 +2,7 @@
 name:         test
 tag:          vibes
 mail_type:    all
-mail_address: ${common:email}
+mail_address: your@mail.com
 nodes:        1
 cores:        32
 queue:        express
