--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
         - Installation.md
         - Credits.md
         - References.md
+        - CONTRIBUTING.md
         - License: license.md
     - Tutorial:
         - Overview: Tutorial/0_intro.md
