--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ click_aliases = "^1.0"
 click_completion = "^0.5.2"
 jconfigparser = "^0.1.2"
 pandas = "^1.0"
+importlib_resources = { version = "*", python = "3.6.*" }
+dataclasses = { version = "*", python = "3.6.*" }
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
