--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ plugins:
 markdown_extensions:
     - toc:
         permalink: "#"
+        toc_depth: 3
     - pymdownx.arithmatex
     - pymdownx.details
     - pymdownx.superfences
