--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ build = "build.py"
 
 [tool.poetry.dependencies]
 python = "^3.6.1, <4.0"
-numpy = "^1.11"
+numpy = "^1.17.5, <1.20"
 scipy = "^1.1.1"
 matplotlib = "^3.1"
 son = "^0.4.1"
