--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,24 @@
 image: registry.gitlab.com/vibes-developers/vibes:test
 
+# https://dev.to/waylonwalker/installing-miniconda-on-linux-from-the-command-line-4ad7
+
 before_script:
   - gfortran --version
+  - python --version
   - flake8
   - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
+  - mkdir -p ~/miniconda3
+  - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+  - bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+  - ~/miniconda3/bin/conda init bash
+  - ls ~
+  - source ~/.bashrc
+  - bash
+  - ~/miniconda3/bin/conda activate base
+  - python --version
+  - conda env list
+  - conda list
+
 #   - pip install poetry==1.1.4
 #   - pip install poetry-core==1.0.0
   - pip list
