--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,21 @@
 # image: registry.gitlab.com/vibes-developers/vibes:test
+image: continuumio/miniconda3
 
 # https://dev.to/waylonwalker/installing-miniconda-on-linux-from-the-command-line-4ad7
 
 before_script:
-  - apt-get install -y gfortran
-  - gfortran --version
-  - flake8
-  - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
-  - mkdir -p ~/miniconda3
-  - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
-  - bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
-  - ~/miniconda3/bin/conda init bash
-  - ls ~
-  - source ~/.bashrc
-  - bash
-  - ~/miniconda3/bin/conda activate base
+  
+#   - gfortran --version
+#   - flake8
+#   - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
+#   - mkdir -p ~/miniconda3
+#   - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+#   - bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+#   - ~/miniconda3/bin/conda init bash
+#   - ls ~
+#   - source ~/.bashrc
+#   - bash
+#   - ~/miniconda3/bin/conda activate base
   - python --version
   - conda env list
   - conda list
