--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,13 +19,16 @@ before_script:
   - python --version
   - conda env list
   - conda list
+  - conda install -c conda-forge gfortran 
+#   - conda install numpy
+  - conda install scipy
 
 #   - pip install poetry==1.1.4
 #   - pip install poetry-core==1.0.0
   - pip list
   - ls /builds/vibes-developers/vibes/vibes/helpers/supercell
-  - pip install -U pip
-  - pip install -U numpy
+#  - pip install -U pip
+#  - pip install -U numpy
   - pip install .
   - ls /builds/vibes-developers/vibes/vibes/helpers/supercell
   - echo $LD_LIBRARY_PATH
