--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,9 +19,9 @@ before_script:
   - python --version
   - conda env list
   - conda list
+  - conda install -c anaconda scipy
   - conda install -c conda-forge gfortran 
 #   - conda install numpy
-  - conda install scipy
 
 #   - pip install poetry==1.1.4
 #   - pip install poetry-core==1.0.0
