--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ before_script:
   - conda env list
   - conda list
   - conda install -c anaconda scipy
-  - conda install -c conda-forge gfortran 
+#   - conda install -c conda-forge gfortran 
 #   - conda install numpy
 
 #   - pip install poetry==1.1.4
