--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ before_script:
   
 #   - gfortran --version
 #   - flake8
-#   - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
 #   - mkdir -p ~/miniconda3
 #   - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
 #   - bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
@@ -29,6 +28,7 @@ before_script:
 #  - pip install -U pip
 #  - pip install -U numpy
   - pip install .
+  - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
   - ls /builds/vibes-developers/vibes/vibes/helpers/supercell
   - echo $LD_LIBRARY_PATH
 #  - poetry install
@@ -37,6 +37,7 @@ before_script:
 
 default:
   script:
+    - pip install pytest
     - pytest --cov --cov-config=setup.cfg tests/ --ignore tests/fireworks/ --ignore tests/aims/
   after_script:
     - bash <(curl -s https://codecov.io/bash) -t 698c45df-99fa-49a3-a353-451e54c537f7
