--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,10 @@ vibes = 'vibes.cli:cli'
 [tool.black]
 target-version = ['py37']
 
+[tool.pytest.ini_options]
+addopts = "--import-mode=importlib"
+filterwarnings = ["ignore"]
+
 [build-system]
 requires = ["setuptools", "wheel", "poetry>=0.12", "numpy"]
 build-backend = "poetry.masonry.api"
