--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ son = "^0.4.1"
 spglib = "^1.12"
 phonopy = "^2.6, <2.9.0"
 ase = "^3.20.0"
-click = "^7.1"
+click = ">=7.0"
 attrs = "^19.1"
 seekpath = "^1.8.4"
 fireworks = {version = "^1.9",optional = true}
@@ -35,7 +35,7 @@ paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
 xarray = ">=0.13"
 netCDF4 = "^1.5"
-jinja2 = "^2.10"
+jinja2 = ">=2.10"
 hiphive = {version = "^0.5.0", optional = true}
 tables = "^3.5"
 click_aliases = "^1.0"
