--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ postgresql = ["psycopg2"]
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
-pytest = "^4.6"
+pytest = ">=6.0"
 flake8 = "^3.7"
 rope = "^0.14.0"
 flake8-bugbear = "^19.8"
