ci | reorder build process

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,17 @@ stages:
   - deploy
 
 before_script: 
-  - apt-get update
-  - apt-get install -y gnupg curl
+  # check syntax before doing anything
   - pip install flake8 flake8-bugbear flake8-comprehensions pytest pytest-cov pytest-xdist 
   - flake8
+  # prepare software environment
+  - apt-get update
+  - apt-get install -y gnupg curl
+  - wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
+  - echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
+  - apt-get update
+  - apt-get install -y mongodb-org
+  # install dependencies that should come from conda and build vibes
   - conda install -c conda-forge numpy scipy gfortran phonopy==2.8.1
   - pip install .
   - pip list
@@ -21,10 +28,6 @@ vibes:
     - pytest --cov --cov-config=setup.cfg --ignore tests/fireworks/ --ignore tests/aims/ tests/ 
     - bash <(curl -s https://codecov.io/bash) -t 698c45df-99fa-49a3-a353-451e54c537f7
 # Fireworks
-    - wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
-    - echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
-    - apt-get update
-    - apt-get install -y mongodb-org
     - mkdir -p /data/db
     - mongod --ipv6 --fork --logpath /var/log/mongod.log
     - pip install FireWorks
