--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ scipy = "^1.1.1"
 matplotlib = "^3.1"
 son = "^0.4.1"
 spglib = "^1.12"
-phonopy = "^2.6, <2.9.0"
+phonopy = "^2.6"
 ase = "^3.20.0,<=3.22.0"
 click = "^8.0"
 attrs = "^19.1"
