--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ matplotlib = "^3.1"
 son = "^0.4.1"
 spglib = "^1.12"
 phonopy = "^2.6"
-ase = "^3.20.0,<=3.22.0"
+ase = "^3.20.0,<3.23"
 click = "^8.0"
 attrs = "^19.1"
 seekpath = "^1.8.4"
