--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,8 @@ son = "^0.4.1"
 spglib = "^1.12"
 phonopy = "^2.6"
 ase = "^3.20.0,<3.23"
-click = "^8.0"
-attrs = "^19.1"
-seekpath = "^1.8.4"
+click = ">=8.0"
+attrs = ">=19.1"
 fireworks = {version = "^1.9",optional = true}
 phono3py = {version = "^1.21",optional = true}
 python-gssapi = {version = "^0.6.4",optional = true}
@@ -34,17 +33,17 @@ fabric = {version = "^2.4",optional = true}
 paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
 xarray = ">=0.13"
-netCDF4 = "^1.5"
+netCDF4 = ">=1.5"
 jinja2 = ">=2.10"
 hiphive = {version = "^0.5.0", optional = true}
 tables = "^3.5"
-click_aliases = "^1.0"
-click_completion = "^0.5.2"
+click_aliases = ">=1.0"
+click_completion = ">=0.5.2"
 jconfigparser = "^0.1.2"
-pandas = "^1.0"
+pandas = ">=1.0"
 importlib_resources = { version = "*", python = "3.6.*" }
 dataclasses = { version = "*", python = "3.6.*" }
-seaborn = "^0.11.0"
+seaborn = ">=0.11.0"
 requests = {version = "^2.25", optional=true}
 
 [tool.poetry.extras]
