--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,82 +1,101 @@
-[tool.poetry]
+[build-system]
+requires = ["setuptools", "numpy", "versioningit ~= 1.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
 name = "fhi-vibes"
-version = "1.0.5"
+authors = [
+    { name = "Florian Knoop", email = "knoop@fhi-berlin.mpg.de" }, 
+    { name = "Thomas Purcell", email = "purcell@fhi-berlin.mpg.de" }
+]
+maintainers = [
+    { name = "Thomas Purcell", email = "purcell@fhi-berlin.mpg.de" },
+    { name = "Christian Carbogno", email = "carbogno@fhi-berlin.mpg.de" }
+]
 description = "Fritz Haber Institute Vibrational Simulations"
-authors = ["Florian Knoop <knoop@fhi-berlin.mpg.de>", "Thomas Purcell <purcell@fhi-berlin.mpg.de"]
-license = "MIT"
 readme = "README.md"
-repository = "https://gitlab.com/vibes-developers/vibes"
-packages = [
-    { include = "vibes" },
+requires-python = ">=3.9"
+keywords = ['thermal transport', 'vibrations', 'molecular dynamics', 'ab initio']
+license = { text = "MIT" }
+classifiers = [
+    "Programming Language :: Python :: 3",
+]
+dependencies = [
+    "numpy>=1.17.5",
+    "scipy>=1.1.1",
+    "matplotlib>=3.1",
+    "son>=0.4.1",
+    "spglib>=1.12",
+    "phonopy>=2.6",
+    "ase>=3.20.0",
+    "click>=8.0",
+    "attrs>=19.1",
+    "xarray>=0.13",
+    "netCDF4>=1.5",
+    "jinja2>=2.10",
+    "tables>=3.5",
+    "click_aliases>=1.0",
+    "click_completion>=0.5.2",
+    "jconfigparser>=0.1.2",
+    "pandas<2.0",
+    "seaborn>=0.11.0"
+]
+dynamic = ["version"]
+
+[project.optional-dependencies]
+fireworks = [
+    "fireworks>=1.9", 
+    "pymongo>=3.8", 
+    "fabric>=2.4", 
+    "paramiko>=2.4", 
+    "requests>=2.25"
+]
+phono3py = ["phono3py>=1.21"]
+hiphive = ["hiphive>=0.50"]
+postgresql = ["psycopg2>=2.8.0"]
+docs=[
+    "mkdocs>=1.2",
+    "mkdocs-material>=7.3",
+    "mkdocs-minify-plugin>=0.5.0"
+]
+tests = [
+    "pytest>=6.0",
+    "pytest-xdist>=1.31",
+    "pytest-cov>=2.8"
+]
+dev = [
+    "black>=19.10b0",
+    "flake8>=3.7",
+    "rope>=0.14.0",
+    "flake8-bugbear>=19.8",
+    "flake8-comprehensions>=3.1",
+    "isort>=4.3"
 ]
 
-keywords = ['physics']
-
-build = "build.py"
-
-[tool.poetry.dependencies]
-python = "^3.6.1, <4.0"
-numpy = "^1.17.5"
-scipy = "^1.1.1"
-matplotlib = "^3.1"
-son = "^0.4.1"
-spglib = ">=1.12"
-phonopy = "^2.6"
-ase = "^3.20.0"
-click = ">=8.0"
-attrs = ">=19.1"
-fireworks = {version = "^1.9",optional = true}
-phono3py = {version = "^1.21",optional = true}
-python-gssapi = {version = "^0.6.4",optional = true}
-pymongo = {version = "^3.8",optional = true}
-fabric = {version = "^2.4",optional = true}
-paramiko = {version = "^2.4",optional = true}
-psycopg2 = {version="^2.8.0", optional=true}
-xarray = ">=0.13"
-netCDF4 = ">=1.5"
-jinja2 = ">=2.10"
-hiphive = {version = "^0.5.0", optional = true}
-tables = "^3.5"
-click_aliases = ">=1.0"
-click_completion = ">=0.5.2"
-jconfigparser = "^0.1.2"
-pandas = ">=1.0,<2.0"
-importlib_resources = { version = "*", python = "3.6.*" }
-dataclasses = { version = "*", python = "3.6.*" }
-seaborn = ">=0.11.0"
-requests = {version = "^2.25", optional=true}
-
-[tool.poetry.extras]
-fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko", "requests"]
-phono3py = ["phono3py"]
-hiphive = ["hiphive"]
-postgresql = ["psycopg2"]
-
-[tool.poetry.dev-dependencies]
-black = "^19.10b0"
-pytest = ">=6.0"
-flake8 = "^3.7"
-rope = "^0.14.0"
-flake8-bugbear = "^19.8"
-flake8-comprehensions = "^3.1"
-pytest-xdist = "^1.31"
-pytest-cov = "^2.8"
-isort = "^4.3"
-mkdocs = "^1.2"
-mkdocs-material = "^7.3"
-mkdocs-minify-plugin = "^0.5.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 vibes = 'vibes.cli:cli'
+
+[project.urls]
+repository = "https://gitlab.com/vibes-developers/vibes"
+homepage="https://vibes-developers.gitlab.io/vibes/"
+documentation="https://vibes-developers.gitlab.io/vibes/Documentation/0_intro"
+
+[tool.setuptools.package-data]
+vibes = ["py.typed"]
+"vibes.templates.config_files" = ["*template", "*.in"]
+
+[tool.setuptools.packages.find]
+where = ["."]  # list of folders that contain the packages (["."] by default)
+exclude = ["paper"]  # exclude packages matching these glob patterns (empty by default)
+namespaces = true  # to disable scanning PEP 420 namespaces (true by default)
 
 [tool.black]
 target-version = ['py37']
 
+[tool.versioningit.vcs]
+method = "git"
+default-tag = "0.0.1"
+
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
 filterwarnings = ["ignore"]
-
-[build-system]
-requires = ["setuptools<=59.2.0", "wheel", "poetry<=1.1.12", "numpy"]
-build-backend = "poetry.masonry.api"
-
