--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,17 +11,13 @@ vibes:
     # check syntax before doing anything
     - pip install flake8 flake8-bugbear flake8-comprehensions pytest pytest-cov pytest-xdist
     - flake8
-    # prepare software environment
     - apt-get update
     - apt-get install -y gnupg curl gfortran
     - wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
     - echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
     - apt-get update
     - apt-get install -y mongodb-org
-    # install dependencies that should come from conda and build vibes
-    # - pip install numpy scipy phonopy==2.8.1
-    # - conda install -c conda-forge phonopy==2.8.1
-    - pip install . --verbose
+    - pip install .[tests,fireworks,dev] --verbose
     - pip list
   script:
     - mkdir -p /data/db
