--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: continuumio/miniconda3
+image: continuumio/miniconda3:23.10.0-1
 # image: registry.gitlab.com/vibes-developers/vibes:default
 
 stages:
