--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ numpy = "^1.17.5"
 scipy = "^1.1.1"
 matplotlib = "^3.1"
 son = ">=0.4.1"
-spglib = "^1.12"
+spglib = ">=1.12"
 phonopy = "^2.6"
 ase = "^3.20.0,<3.23"
 click = ">=8.0"
