--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: python :: 3",
 ]
 dependencies = [
-    "numpy>=1.17.5",
+    "numpy>=1.17.5<2",
     "scipy>=1.1.1",
     "matplotlib>=3.1",
     "son>=0.4.1",
@@ -155,6 +155,7 @@ lint.ignore = [
     "ISC001",
     "ISC003",
     "NPY002",
+    "NPY201",
     "N802",
     "N803",
     "N806",
