--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: python :: 3",
 ]
 dependencies = [
-    "numpy>=1.17.5<2",
+    "numpy<2",
     "scipy>=1.1.1",
     "matplotlib>=3.1",
     "son>=0.4.1",
