--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ classifiers = [
 ]
 dependencies = [
     "numpy<2",
-    "scipy>=1.1.1",
+    "scipy<=1.13",
     "matplotlib>=3.1",
     "son>=0.4.1",
-    "spglib>=1.12",
+    "spglib<=2.3",
     "phonopy>=2.6",
-    "ase>=3.20.0",
+    "ase<=3.22",
     "click>=8.0",
     "attrs>=19.1",
     "xarray>=0.13",
