--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools", "numpy", "versioningit ~= 1.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["setuptools", "numpy", "wheel", "meson-python"]
+build-backend = "mesonpy"
 
 [project]
 name = "fhi-vibes"
