--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "click_completion>=0.5.2",
     "jconfigparser>=0.1.2",
     "pandas<2.0",
-    "seaborn>=0.11.0"
+    "seaborn>=0.11.0",
+    "ruamel.yaml==0.17.40"
 ]
 dynamic = ["version"]
 
