update meson build

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-complexity = 18
 max-line-length = 90
-ignore = D203,E203,E731,W503,E741,B006,B301,F541,B008
+ignore = D203,E203,E731,W503,E741,B006,B301,F541,B008,C416
 exclude = examples/*,**/directions.py,vibes/fireworks/*_launcher.py,vibes/phonon_db/phonon_jsondb.py,vibes/phonon_db/phonon_sqlitedb.py
 
 [isort]
@@ -18,4 +18,3 @@ include = */vibes/*
 omit =
     docs/
     paper/
-
