--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,7 @@ lint.ignore = [
     "N813",
     "N816",
     "PD011",   # pandas-use-of-dot-values
+    "PD013",   # pandas-use-of-dot-stack
     "PD901",
     "PERF203", # try-except-in-loop
     "PERF401", # try-except-in-loop
