--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ vibes:
     - echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
     - apt-get update
     - apt-get install -y mongodb-org
-    - pip install .[tests,fireworks,dev] --verbose
+    - pip install .[tests,fireworks,phono3py,dev] --verbose
     - pip list
   script:
     - mkdir -p /data/db
