--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ vibes:
     - pip install ruff
     - ruff check
     - apt-get update
-    - apt-get install -y gnupg curl gfortran g++ openblas
+    - apt-get install -y gnupg curl gfortran g++ libgomp1 libopenblas-dev liblapack-dev liblapacke-dev
     - wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
     - echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
     - apt-get update
