--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ vibes:
   stage: test
   before_script:
     # check syntax before doing anything
-    - conda install -c conda-forge phono3py
+    - conda install -c conda-forge -y phono3py
     - pip install ruff
     - ruff check
     - apt-get update
