--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ requires-python = "<3.12"
 keywords = ['thermal transport', 'vibrations', 'molecular dynamics', 'ab initio']
 license = { text = "MIT" }
 classifiers = [
-    "Programming Language :: python :: 3",
+    "Programming Language :: Python :: 3",
 ]
 dependencies = [
     "numpy<2",
